updates to Photo Functionality

--- a/GUNAAPugetSound/ClientApp/src/site.css
+++ b/GUNAAPugetSound/ClientApp/src/site.css
@@ -330,7 +330,7 @@ body {
 }
 
 
-.auth-album-detail-container > a {
+.auth-album-detail-container > a, .auth-album-detail-container > input {
     font-size: 11px;
 }
 
