--- a/GUNAAPugetSound/ClientApp/src/site.css
+++ b/GUNAAPugetSound/ClientApp/src/site.css
@@ -19,6 +19,12 @@
     z-index: 1;
 }*/
 
+.loading 
+{
+    width: 50px;
+    margin: auto;
+
+}
 #login {
     float: right;
     margin: -4% -4%;
